--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gulp": "^3.9.1",
     "gulp-webpack": "^1.5.0",
     "jsx-loader": "^0.13.2",
+    "proptypes": "^1.0.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "rimraf": "^2.6.1"
