Introduce Material-UI

--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "gulp": "^3.9.1",
     "gulp-webpack": "^1.5.0",
     "jsx-loader": "^0.13.2",
+    "material-ui": "^0.18.0",
     "proptypes": "^1.0.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-tap-event-plugin": "^2.0.1",
     "rimraf": "^2.6.1"
   },
   "devDependencies": {
