--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "webpack": "^2.4.1"
+  },
+  "scripts": {
+    "build": "gulp build"
   }
 }
